@@ -2,6 +2,10 @@ v2.14.1 - xx xxx xxxx
 ---------------------
    - IPsec:
      * Fixed support of strongswan 5.7+ in ovs-ipsec-monitor.
+   - OVSDB:
+     * New unixctl command 'ovsdb-server/memory-trim-on-compaction on|off'.
+       If turned on, ovsdb-server will try to reclaim all the unused memory
+       after every DB compaction back to OS.  Disabled by default.
    - DPDK:
      * Fixed support of 'net_virtio' devices.
 
